src/main/java/com/example/cinemagicgto/cinemarestful/error/UsuarioNotFoundException.java
package com.example.cinemagicgto.cinemarestful.error;

public class UsuarioNotFoundException  extends Exception{
    public UsuarioNotFoundException(String message) {super(message);}
}
